# msgpack-examples

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: header.h
python/: basic_reader.py
src/: classPacker.cpp  example_01.cpp  read_write_io.cpp  sbuffer_to_fbuffer.cpp
